--- a/stubeef.ioc
+++ b/stubeef.ioc
@@ -110,12 +110,12 @@ PA10.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=T_SWDIO
 PA13.Locked=true
-PA13.Mode=Serial_Wire
+PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=T_SWCLK
 PA14.Locked=true
-PA14.Mode=Serial_Wire
+PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.Mode=I2C
 PA15.Signal=I2C1_SCL
@@ -171,6 +171,7 @@ PB2.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
 PB3.Locked=true
+PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
 PB6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB6.GPIO_Label=LimitBottom
